--- a/Análise.ipynb
+++ b/Análise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "24892086-a1a7-4d63-823b-ed775180ebba",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1f24dab2-b7f5-42b4-b160-bb23d48f0001",
    "metadata": {
     "scrolled": true
@@ -1321,6 +1321,66 @@
     "Ano de fabricação com valores ausentes 0 ou null.\n",
     "Marca com valores ausentes."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "174b91dd-f1fa-4285-b680-d3bc9dc93e8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('dados/transformados_e_limpos_todos_anos.csv', delimiter=',', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d3830bc0-a471-4c17-ab5b-ecc36ad016f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "marca\n",
+       "HONDA            52835\n",
+       "VW               34640\n",
+       "FIAT             28692\n",
+       "não informado    18386\n",
+       "FORD             14779\n",
+       "M.BENZ           14597\n",
+       "GM               13128\n",
+       "Não se aplica    12196\n",
+       "SCANIA           10767\n",
+       "VOLVO            10265\n",
+       "YAMAHA            9806\n",
+       "CHEVROLET         9192\n",
+       "RENAULT           9059\n",
+       "TOYOTA            7912\n",
+       "HYUNDAI           5567\n",
+       "CHEV              5347\n",
+       "PEUGEOT           2710\n",
+       "MMC               2358\n",
+       "NISSAN            2216\n",
+       "CITROEN           1797\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['marca'].value_counts()[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6728cdf-d322-4fbd-9246-c4d30ccccb09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
